# nnast_model

./: .env.example  .gitignore  DATASET_CONSTRUCTION_STRATEGY.md  DATASET_PAPER_OUTLINE.md  DELETED_FILES_SUMMARY.md  GPU_CLOUD_GUIDE.md  GPU_CLOUD_TRAINING.md  IMPLEMENTATION_GUIDE.md  NNAST_ARCHITECTURE_IMPROVEMENTS.md  NNAST_PAPER.md  NNAST_PAPER_JA.md  NNAST_trainingStrategy&datasetconstruction.md  NNAST設計書.docx  RELEASE_CHECKLIST.md  STRATEGY.md  cli.py  collection_log.txt  nnast_architecture_paper.tex  nnast_architecture_v2_paper.tex  nnast_system_design.md  patterns.yaml  tikzmake.sh  実装状況_設計書照合レポート.md
aws_setup_scripts/: download_results.sh  setup_ec2.sh  train_with_auto_stop.sh  upload_data.sh
checkpoints_test/: checkpoint_epoch_1.pt  checkpoint_epoch_2.pt  checkpoint_epoch_3.pt  config.json  training_history.json
cloud/: README.md
cpg/: __init__.py  ast_to_json.py  build_ast.py  build_ast_rust.py  parse.py  pattern_matcher.py  profile_cpg.py
cpg_rust/: .gitignore  CLEANUP_SUMMARY.md  Cargo.toml  DEFAULT_RUST_RECOMMENDATION.md  FINAL_STATUS.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_RESULTS.md  PERFORMANCE_SUMMARY.md  README.md  STATUS.md  test_comparison_semantic.py  test_comprehensive.py  test_integration.py  test_performance.py  test_performance_release.py  test_python_compatibility.py  test_real_world.py
cpg_rust/src/: ast_parser.rs  builder.rs  cfg.rs  dfg.rs  lib.rs  schema.rs  scope.rs  utils.rs
data/: README.md  README_COLLECTION.md  check_progress.sh  check_quality.py  collect_comprehensive.sh  collect_dataset.py  collect_diverse.sh  (+18 more)
(+121 files in other folders)
