[package]
name = "cpg_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance CPG (Code Property Graph) builder in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/nnast_model"

[lib]
name = "cpg_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38", "auto-initialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
indexmap = { version = "2.0", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
once_cell = "1.19"

[dev-dependencies]
# Testing
rstest = "0.18"
proptest = "1.4"

# PyO3 0.20+ doesn't require build-dependencies for basic setup
# [build-dependencies]
# pyo3-build-config = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
